# Data-Structures-and-Algorithm-with-Design-and-Analysis

./: BoundaryPoint.cpp  LICENSE.md  README.md
College_Practicals/: q1.cpp  q11.cpp  q2.cpp  q3.cpp  q4.cpp  q5.cpp  q6.cpp  q7.cpp  q8.cpp  q9.cpp
DSA_Topicwise_Questions/Arrays/: Longest-Consecutive-Sequence.cpp  best-time-to-buy-stock.cpp  container-with-most-water.cpp  dutch-national-flag.py  maximum-subarray.cpp  rotate-array.py  search-in-rotated-sorted-array.cpp
DSA_Topicwise_Questions/Binary_Tree/: balanced-binary-tree.cpp  binaryTree-vertical-order-traversal.cpp  level-order-tranversal.cpp  max-depth-of-tree.cpp  same-tree.cpp
DSA_Topicwise_Questions/Graphs/: flood-fill.cpp  keys-and-rooms.cpp  number-of-good-components.cpp  number-of-islands.cpp  number-of-provinces.cpp  rotten-oranges.cpp  shortest-path-visitng-all-nodes.cpp
DSA_Topicwise_Questions/Heaps/: top-K-frequent-elements.cpp
DSA_Topicwise_Questions/Linkedlist/: linkedlist-cycle.cpp  merge-two-sorted-linkedlist.cpp  reverse-linkedlist.cpp
DSA_Topicwise_Questions/Stack/: longest-valid-parentheses.cpp  remove-duplicate-letters.cpp  reverse-polish-notation.cpp
DSA_Topicwise_Questions/Strings/: Group-Anagrams.cpp  longest-palindromic-substring.cpp  longest-substring.cpp  palindrome-partitioning-ii.cpp  reverse-words.cpp
Examples of Time Complexity Problems/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py
Graph/: CMakeLists.txt  build_test.sh
Graph/Header/: CMakeLists.txt
Graph/Header/Algorithms/: DFS.h
Graph/Header/Graph/: Graph.h  WeightedGraph.h
Graph/Implementation/: CMakeLists.txt
Graph/Implementation/Algorithms/: DFS.cpp
Graph/Implementation/Graph/: Graph.cpp  WeightedGraph.cpp
Graph/tests/: CMakeLists.txt  dfs_test.cpp  graph_tests.cpp  weighted_graph_tests.cpp
Heap/: Is_heap.cpp  Pop_heap.cpp  Push_heap.cpp  Sort_heap.cpp
Important Interview Questions/: LuckyFour.cpp  PalindromeBySplitting.cpp
Important_Graph_Algorithms/: BellmanFord_Algo.cpp  Breadth_First_Search.cpp  DSU_Template.cpp  Depth_First_Search.cpp  Floyyd_Warshall_Algo.cpp  KruskalAlgo.cpp  MergeSort.cpp  Prims_Algo.cpp  TopologicalSort.cpp
Matrix_Chain_Multiplication/: Egg_Dropping_Problem.cpp  MCM.cpp  Parenthesization_Problem.cpp  Scramble_String.cpp
Most_Useful_Algorithms/: AVL_Tree.java  Bfs.py  Dfs.py  Floyd's Cycle Detection.py  KMP.py  Kadane_Algorithm.cpp  ManacherAlgo.cpp  SegmentTree.java  Z_algorithm.cpp  kadanes_Algorithm.cpp  rabin_karp.cpp  skiplist_insert_delete_search.cpp  trie_delete.cpp  trie_search.cpp
Searching_Algos/: BinarySearch.py  BinarySearchRecursive.py  LinearSearch.py  SentinelLinearSearch.cpp  SentinelLinearSearch.py  meta-binary-search.cpp  meta-binary-search.py
Sorting_Algos/: All_sorting.cpp  MergeSortGraph.csv  QuickSort.py  bubble_sort.cpp  count_sort.cpp  heap_graph.cpp  heap_sort.cpp  insertion.cpp  insertion_graph.cpp  max_heapify.cpp  max_heapify.py  merge_graph.cpp  merge_sort.cpp  min_heapify.cpp  quick_sort.cpp  radiax_sort.cpp  randomised_select.cpp  selection_sort.cpp  t_heap_sort.cpp
Sorting_algos_Python/: Bubble sort.py  Insertion sort.py  Selection sort.py  merge sort.py  quick sort.py
Trees/: inorder.py  levelorder.py  postorder.py  preorder.py
number_theory algorithms/: GCD.cpp  Sieve of Eratosthenes.cpp  binary_gcd.cpp  binomial coefficient.cpp  divisors.cpp  pow.cpp  prime factorisation1.cpp  prime factorisation2.cpp
shortestPath/: primsAlgo.py
(+10 files in other folders)
